# Rudo

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
src/: actions.rs  app.rs  cli.rs  events.rs  handlers.rs  io.rs  main.rs  state.rs  theme.rs  ui.rs
src/app/: handlers.rs  mod.rs  state.rs
src/ui/: list.rs  mod.rs  popups.rs  status.rs
